--- a/WordpressExtractorModularApp/WordpressExtractorModularApp/WordpressExtractorModular/WordpressExtractorModular.csproj
+++ b/WordpressExtractorModularApp/WordpressExtractorModularApp/WordpressExtractorModular/WordpressExtractorModular.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.2" />
+    <PackageReference Include="Markdig" Version="0.37.0" />
   </ItemGroup>
 
 </Project>
